--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -41,6 +41,7 @@ jobs:
     
     - name: Push result
       run: |
+        git config --global user.email "krzysiek.firmowy.pan@gmail.com"
         git add dist/Karta.exe
         git commit -m "Build -> Push"
         git push
