--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,12 +20,18 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - name: Install GoW
+      run: |
+        Set-ExecutionPolicy RemoteSigned -scope CurrentUser
+        iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
+        scoop install gzip
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install pyinstaller
         pip install pyqt5
+        
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -41,8 +47,12 @@ jobs:
     
     - name: Push result
       run: |
+        copy *_names_* dist/
+        copy abilities.csv dist/
         git config --global user.email "krzysiek.firmowy.pan@gmail.com"
+        
         git add dist/Karta.exe
+        git add dist/*.csv
         git commit -m "Build -> Push"
         git push
         
