--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         Set-ExecutionPolicy RemoteSigned -scope CurrentUser
         iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-        scoop install gzip
+        scoop install zip
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -49,10 +49,9 @@ jobs:
       run: |
         copy *_names_* dist/
         copy abilities.csv dist/
+        zip dist/Karta.zip dist/*.csv dist/Karta.exe
         git config --global user.email "krzysiek.firmowy.pan@gmail.com"
-        
-        git add dist/Karta.exe
-        git add dist/*.csv
+        git add dist/Karta.zip
         git commit -m "Build -> Push"
         git push
         
