--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -47,8 +47,8 @@ jobs:
     
     - name: Push result
       run: |
-        copy *_names_* dist/
-        copy abilities.csv dist/
+        cp *_names_* dist/
+        cp abilities.csv dist/
         zip dist/Karta.zip dist/*.csv dist/Karta.exe
         git config --global user.email "krzysiek.firmowy.pan@gmail.com"
         git add dist/Karta.zip
