--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -47,9 +47,9 @@ jobs:
     
     - name: Push result
       run: |
-        cp *_names_* dist\
-        cp abilities.csv dist\
-        zip dist\Karta.zip dist\*.csv dist\Karta.exe
+        #copy *_names_* dist\
+        #copy abilities.csv dist\
+        zip dist\Karta.zip *_names_*.csv abilities.csv dist\Karta.exe
         git config --global user.email "krzysiek.firmowy.pan@gmail.com"
         git add dist\Karta.zip
         git commit -m "Build -> Push"
