--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,25 +25,25 @@ jobs:
         Set-ExecutionPolicy RemoteSigned -scope CurrentUser
         iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
         scoop install zip
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install pyinstaller
-        pip install pyqt5
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install flake8 pytest
+#        pip install pyinstaller
+#        pip install pyqt5
         
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+#    - name: Lint with flake8
+#      run: |
+#        # stop the build if there are Python syntax errors or undefined names
+#        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+#        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+#        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 #    - name: Test with pytest
 #      run: |
 #        pytest
-    - name: Create package
-      run: |
-        pyinstaller --onefile --name Karta application.py
+#    - name: Create package
+#      run: |
+#        pyinstaller --onefile --name Karta application.py
     
     - name: Push result
       run: |
