--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -51,9 +51,10 @@ jobs:
         echo "Copied names"
         copy abilities.csv dist\
         echo "Copied abilities"
-        #zip dist\Karta.zip *_names_*.csv abilities.csv dist\Karta.exe
+        zip dist\Karta.zip *_names_*.csv abilities.csv dist\Karta.exe
+        echo "Zipped"
         git config --global user.email "krzysiek.firmowy.pan@gmail.com"
-        git add dist\*
+        git add dist\Karta.zip
         echo "Added files"
         git commit -m "Build -> Push"
         git push
