--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         Set-ExecutionPolicy RemoteSigned -scope CurrentUser
         iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-        scoop install zip
+        scoop install 7zip
 #    - name: Install dependencies
 #      run: |
 #        python -m pip install --upgrade pip
@@ -51,7 +51,7 @@ jobs:
         echo "Copied names"
         copy abilities.csv dist\
         echo "Copied abilities"
-        zip dist\Karta.zip *_names_*.csv abilities.csv dist\Karta.exe
+        7z -a dist\Karta.zip *_names_*.csv abilities.csv dist\Karta.exe
         echo "Zipped"
         git config --global user.email "krzysiek.firmowy.pan@gmail.com"
         git add dist\Karta.zip
