--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -51,7 +51,8 @@ jobs:
         echo "Copied names"
         copy abilities.csv dist\
         echo "Copied abilities"
-        7za a dist\Karta.zip *_names_*.csv abilities.csv dist\Karta.exe
+        7z a Karta.zip *_names_*.csv abilities.csv dist\Karta.exe
+        mv Karta.zip dist\Karta.zip
         echo "Zipped"
         git config --global user.email "krzysiek.firmowy.pan@gmail.com"
         git add dist\Karta.zip
