--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -43,7 +43,9 @@ jobs:
       run: |
         pyinstaller --onefile --name Karta application.py
         mv dist\Karta.exe Karta.exe
-        7z a Karta.zip *_names_*.csv abilities.csv Karta.exe
+        pyinstaller --onefile --name Kalkulator Shooting_app.py
+        mv dist\Kalkulator.exe Kalkulator.exe
+        7z a Karta.zip *_names_*.csv abilities.csv Karta.exe Kalkulator.exe
         git config --global user.email "krzysiek.firmowy.pan@gmail.com"
         git add Karta.zip
         git commit -m "Build"
